lab1/Test/L1-A-9-96.cmm
int RpYdDs6M4b ( ) {
  if ( tIWvc2CpH ) {
  }else   if ( ZZQ )   DkAmcvctF9OOfL_6Vc ;


}
int mjIYRn4H8S , o9vAeBa 

;
struct {
  struct kS_L9d7WGF77uq0NP_ {
    struct rE_v3sBbkKEdJV5paAw e09VqK8AzRWmutlgN ;
    struct R N3bi0eXuT2jEHJBuua ;
  }K6wvErQzI , , M_yCvSxuGdy0w_w5W , VeHgZan1cXaZrvaMX4g 
    ;
  int CLCLsslBKwPS10TNN4 = PhInbVZoxBUGgqXSsz || swgB17Ksx 
    == whBtctuH51AHKzr ! zCI3Z0rH0cEm1deTPt ( zLwbvTPP 
    = g7lFMFnGu && OQq0k0V4xnbQlCRvQ >= ! ! EdseJ [ g0ZVhz 
    && tDux21kV < pQRIVvn6C2JQol5 + dlU8qqGLxHg79yy * 
    ( PPyW_QTm4 = G4FX && G2lwe3Yw8v5kRNv1pc <= wXefvTYrhY_JZi8NH 
    / - XnjjxNpdwkZv ( HD4Y2YVaVFevTyH , UMN0K != ghU 
    [ miphnY_tKmlBCjjesElO && CY9FrhNkE ] . EzQUto . a9SBd2sa6IE5CWj 
    ) > JZk ) - 411285285 ] / 1526400185.621424758 ) * 
    - EgjJEFPADcKSuV3 ( ) . qnoX6tdvmdNEqa ;
};
struct ZXYZWmZOKl CxOhGuxD1gpXmC1UhK2 ( float lVltNZsrhhxb 
  [ 1184639532 ] , int PRp ) {
}
int nX_y2HPNI ( ) {
}
int j5yvjZ ( ) {
}
int GkalP9Qy63O ( ) {
  while ( y6RDgOauS4uidr )   if ( Qu )   nWY5cvTaYlWLxbwVHx1 
    ;
else   return g4Ltgchfv ;


}
